--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://shubham-srv/github.io/refine",
   "name": "antd-tuto-new",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "craco-less": "^2.0.0",
+    "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.1",
@@ -29,6 +31,8 @@
     "typescript": "^4.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "craco start",
     "build": "craco build",
     "test": "craco test",
