host url correction

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shubham-srv/github.io/refine",
+  "homepage": "https://shubham-srv.github.io/refine",
   "name": "antd-tuto-new",
   "version": "0.1.0",
   "private": true,
