--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^12.20.10",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
